--- a/views/bookings_management.erb
+++ b/views/bookings_management.erb
@@ -394,10 +394,11 @@
                      <table class="table">
                         <thead class="table-header">
                           <tr>
-                            <th class="table-cell left_text" scope="col" style="width:50%"><%=t.booking_management.form.booking_line.item%></th>
+                            <th class="table-cell left_text" scope="col" style="width:40%"><%=t.booking_management.form.booking_line.item%></th>
                             <th class="table-cell right_text" scope="col" style="width:7em"><%=t.booking_management.form.booking_line.days%></th>                           
                             <th class="table-cell right_text" scope="col" style="width:7em"><%=t.booking_management.form.booking_line.quantity%></th>                            
-                            <th class="table-cell right_text" scope="col" style="width:7em"><%=t.booking_management.form.booking_line.unit_cost%></th>                            
+                            <th class="table-cell right_text" scope="col" style="width:7em"><%=t.booking_management.form.booking_line.unit_cost%></th> 
+                            <th class="table-cell right_text" scope="col" style="width:7em"><%=t.booking_management.form.booking_line.deposit%></th>                           
                             <th class="table-cell right_text" scope="col" style="width:7em"><%=t.booking_management.form.booking_line.cost%></th>        
                           </tr>
                         </thead>
@@ -408,6 +409,7 @@
                                <td class="table-cell right_text"><%%= entity.days %></td>                               
                                <td class="table-cell right_text"><%%= entity.booking_lines[lineIdx].quantity %></td>
                                <td class="table-cell right_text"><%%= new Number(entity.booking_lines[lineIdx].item_unit_cost).toFixed(2) %></td>
+                               <td class="table-cell right_text"><%%= new Number(entity.booking_lines[lineIdx].product_deposit_cost).toFixed(2) %></td>                               
                                <td class="table-cell right_text"><%%= new Number(entity.booking_lines[lineIdx].item_cost).toFixed(2) %></td>
                             </tr>
                           <%% } %>
@@ -417,6 +419,7 @@
                                <td class="table-cell right_text"><%%= entity.days %></td>                               
                                <td class="table-cell right_text"><%%= entity.booking_extras[extraIdx].quantity %></td>
                                <td class="table-cell right_text"><%%= new Number(entity.booking_extras[extraIdx].extra_unit_cost).toFixed(2) %></td>
+                               <td class="table-cell"></td>
                                <td class="table-cell right_text"><%%= new Number(entity.booking_extras[extraIdx].extra_cost).toFixed(2) %></td>
                             </tr>
                           <%% } %>
@@ -426,10 +429,12 @@
                                <td class="table-cell"></td>
                                <td class="table-cell"></td>
                                <td class="table-cell"></td>
+                               <td class="table-cell"></td>
                                <td class="table-cell right_text"><strong><%%= new Number(entity.item_cost).toFixed(2) %></strong></td>
                             </tr>
                             <tr class="table-row">
                                <td class="table-cell"><strong class="uppercase_text"><%= t.booking_management.form.extras_cost %></strong></td>
+                               <td class="table-cell"></td>
                                <td class="table-cell"></td>
                                <td class="table-cell"></td>
                                <td class="table-cell"></td>
@@ -442,6 +447,7 @@
                             <td class="table-cell"></td>
                             <td class="table-cell"></td>
                             <td class="table-cell"></td>
+                            <td class="table-cell"></td>
                             <td class="table-cell right_text"><%%= new Number(entity.time_from_cost).toFixed(2) %> </td>
                           </tr>
                           <%% } %>
@@ -450,18 +456,19 @@
                             <td class="table-cell uppercase_text"><%=t.new_booking.time_to_cost%></td>
                             <td class="table-cell"></td>
                             <td class="table-cell"></td>
-                            <td class="table-cell"></td>                               
+                            <td class="table-cell"></td>     
+                            <td class="table-cell"></td>                          
                             <td class="table-cell right_text"><%%= new Number(entity.time_to_cost).toFixed(2) %> </td>
                           </tr>
                           <%% } %>
-
  
                           <%% if (entity.pickup_place_cost > 0 ) { %>          
                           <tr class="table-row">
                             <td class="table-cell uppercase_text"><%=t.new_booking.pickup_place_cost%></td>
                             <td class="table-cell"></td>
                             <td class="table-cell"></td>
-                            <td class="table-cell"></td>                               
+                            <td class="table-cell"></td>   
+                            <td class="table-cell"></td>                            
                             <td class="table-cell right_text"><%%= new Number(entity.pickup_place_cost).toFixed(2) %> </td>
                           </tr>      
                           <%% } %>
@@ -472,12 +479,25 @@
                             <td class="table-cell"></td>
                             <td class="table-cell"></td>                            
                             <td class="table-cell"></td>
+                            <td class="table-cell"></td>
                             <td class="table-cell right_text"><%%= new Number(entity.return_place_cost).toFixed(2) %> </td>
                           </tr>                 
                           <%% } %>   
 
+                          <%% if (entity.product_deposit_cost > 0 ) { %>
+                          <tr class="table-row">
+                            <td class="table-cell uppercase_text"><%=t.new_booking.product_deposit_cost%></td>
+                            <td class="table-cell"></td>
+                            <td class="table-cell"></td>
+                            <td class="table-cell"></td>
+                            <td class="table-cell"></td>
+                            <td class="table-cell right_text"><%%= new Number(entity.product_deposit_cost).toFixed(2) %> </td>
+                          </tr>
+                          <%% } %>                          
+
                            <tr class="table-row">
                                <td class="table-cell"><strong class="uppercase_text"><%= t.booking_management.form.total_cost %></strong></td>
+                               <td class="table-cell"></td>
                                <td class="table-cell"></td>
                                <td class="table-cell"></td>
                                <td class="table-cell"></td>
@@ -489,6 +509,7 @@
                                <td class="table-cell"></td>
                                <td class="table-cell"></td>
                                <td class="table-cell"></td>
+                               <td class="table-cell"></td>
                                <td class="table-cell right_text"><span><%%= new Number(entity.booking_amount).toFixed(2) %></span></td>
                             </tr> 
 
@@ -497,11 +518,13 @@
                                <td class="table-cell"></td>
                                <td class="table-cell"></td>
                                <td class="table-cell"></td>
+                               <td class="table-cell"></td>
                                <td class="table-cell right_text"><strong><%%= new Number(entity.total_paid).toFixed(2) %></strong></td>
                             </tr> 
 
                             <tr class="table-row">
                                <td class="table-cell"><strong class="uppercase_text"><%= t.booking_management.form.total_pending %></strong></td>
+                               <td class="table-cell"></td>
                                <td class="table-cell"></td>
                                <td class="table-cell"></td>
                                <td class="table-cell"></td>
