--- a/views/config_booking.erb
+++ b/views/config_booking.erb
@@ -9,25 +9,41 @@
   <div class="grid_6">
     <div class="all-space">
   <h3><%=t.booking_settings.form.general_group%></h3>
+  <%= render_variable_textarea('booking.notification_email', t.booking_settings.form.notification_email) %>
+  <h3><%=t.booking_settings.form.rent_group%></h3>
   <%= render_variable_select('booking.item_family', t.booking_settings.form.family, families) %>
   <%= render_variable_input_text('booking.min_days', t.booking_settings.form.min_days, 2, 2) %>  
-  <%= render_variable_textarea('booking.notification_email', t.booking_settings.form.notification_email) %>
+  <%= render_variable_select('booking.reservation_starts_with', t.booking_settings.form.reservation_starts_with.title, 
+    reservation_starts_with) %>
+  <h3><%=t.booking_settings.form.pickup_return_group%></h3>  
   <%= render_variable_checkbox_boolean('booking.allow_custom_pickup_return_place', t.booking_settings.form.custom_pickup_return_place) %>
   <%= render_variable_input_text('booking.custom_pickup_return_place_price', t.booking_settings.form.custom_pickup_return_place_price, 3, 3) %>
   <%= render_variable_select('booking.pickup_return_timetable', t.booking_settings.form.pickup_return_timetable, pickup_return_timetables) %>  
   <%= render_variable_input_text('booking.pickup_return_timetable_out_price', t.booking_settings.form.pickup_return_timetable_out_price, 3, 3) %>    
-  <%= render_variable_select('booking.reservation_starts_with', t.booking_settings.form.reservation_starts_with.title, 
-    reservation_starts_with) %>
-</div>
-  </div>
-  <div class="grid_6">
-    <div class="left-margin all-space">
   <h3><%=t.booking_settings.form.payment_group%></h3>
   <%= render_variable_input_text('booking.deposit', t.booking_settings.form.deposit, 2, 2) %>
   <%= render_variable_checkbox_boolean('booking.allow_total_payment', t.booking_settings.form.allow_total_payment) %>  
   <%= render_variable_checkbox_boolean('booking.payment', t.booking_settings.form.payment) %>
   <%= render_variable_input_text('booking.item_hold_time', t.booking_settings.form.item_hold_time, 2, 2) %>
-  <%= render_variable_input_text('booking.payment_cadence', t.booking_settings.form.payment_cadence, 2, 2) %>
+  <%= render_variable_input_text('booking.payment_cadence', t.booking_settings.form.payment_cadence, 2, 2) %> 
+</div>
+  </div>
+  <div class="grid_6">
+    <div class="left-margin all-space">
+  <h3><%=t.booking_settings.form.turns_group%></h3>
+  <%= render_variable_input_text('booking.morning_turns', t.booking_settings.form.morning_turns, 255, 30) %>
+  <%= render_variable_input_text('booking.afternoon_turns', t.booking_settings.form.afternoon_turns, 255, 30) %>
+  <%= render_variable_input_text('booking.night_turns', t.booking_settings.form.night_turns, 255, 30) %>
+  <%= render_variable_input_text('booking.duration_of_service', t.booking_settings.form.duration_of_service, 10, 10) %>
+  <%= render_variable_input_text('booking.duration_of_service_extra', t.booking_settings.form.duration_of_service_extra, 10, 10) %>  
+  <%= render_variable_input_text('booking.duration_of_service_extra_turns', t.booking_settings.form.duration_of_service_extra_turns, 255, 30) %>  
+  <h3><%=t.booking_settings.form.people_group%></h3>
+  <%= render_variable_input_text('booking.min_children', t.booking_settings.form.min_children, 2, 2) %>
+  <%= render_variable_input_text('booking.max_children', t.booking_settings.form.max_children, 2, 2) %>
+  <%= render_variable_input_text('booking.max_children_extra', t.booking_settings.form.max_children_extra, 2, 2) %>  
+  <%= render_variable_input_text('booking.min_adults', t.booking_settings.form.min_adults, 2, 2) %>
+  <%= render_variable_input_text('booking.max_adults', t.booking_settings.form.max_adults, 2, 2) %>
+  <%= render_variable_input_text('booking.max_adults_extra', t.booking_settings.form.max_adults_extra, 2, 2) %>    
 </div>
   </div>
   <div class="grid_12">
