--- a/views/config_booking.erb
+++ b/views/config_booking.erb
@@ -9,17 +9,11 @@
   <div class="grid_6">
     <div class="all-space">
   <h3><%=t.booking_settings.form.general_group%></h3>
+  <%= render_variable_select('booking.mode', t.booking_settings.form.booking_mode.title, 
+    booking_modes) %>
   <%= render_variable_textarea('booking.notification_email', t.booking_settings.form.notification_email) %>
-  <h3><%=t.booking_settings.form.rent_group%></h3>
-  <%= render_variable_select('booking.item_family', t.booking_settings.form.family, families) %>
-  <%= render_variable_input_text('booking.min_days', t.booking_settings.form.min_days, 2, 2) %>  
-  <%= render_variable_select('booking.reservation_starts_with', t.booking_settings.form.reservation_starts_with.title, 
-    reservation_starts_with) %>
-  <h3><%=t.booking_settings.form.pickup_return_group%></h3>  
-  <%= render_variable_checkbox_boolean('booking.allow_custom_pickup_return_place', t.booking_settings.form.custom_pickup_return_place) %>
-  <%= render_variable_input_text('booking.custom_pickup_return_place_price', t.booking_settings.form.custom_pickup_return_place_price, 3, 3) %>
-  <%= render_variable_select('booking.pickup_return_timetable', t.booking_settings.form.pickup_return_timetable, pickup_return_timetables) %>  
-  <%= render_variable_input_text('booking.pickup_return_timetable_out_price', t.booking_settings.form.pickup_return_timetable_out_price, 3, 3) %>    
+  <%= render_variable_input_text('booking.scheduler_start_time', t.booking_settings.form.scheduler_start_time, 5, 5) %>
+  <%= render_variable_input_text('booking.scheduler_finish_time', t.booking_settings.form.scheduler_finish_time, 5, 5) %>  
   <h3><%=t.booking_settings.form.payment_group%></h3>
   <%= render_variable_input_text('booking.deposit', t.booking_settings.form.deposit, 2, 2) %>
   <%= render_variable_checkbox_boolean('booking.allow_total_payment', t.booking_settings.form.allow_total_payment) %>  
@@ -30,6 +24,19 @@
   </div>
   <div class="grid_6">
     <div class="left-margin all-space">
+  <% if booking_mode == 'rent' %>
+  <h3><%=t.booking_settings.form.rent_group%></h3>
+  <%= render_variable_select('booking.item_family', t.booking_settings.form.family, families) %>
+  <%= render_variable_input_text('booking.min_days', t.booking_settings.form.min_days, 2, 2) %>  
+  <%= render_variable_select('booking.reservation_starts_with', t.booking_settings.form.reservation_starts_with.title, 
+    reservation_starts_with) %>
+  <h3><%=t.booking_settings.form.pickup_return_group%></h3>  
+  <%= render_variable_checkbox_boolean('booking.allow_custom_pickup_return_place', t.booking_settings.form.custom_pickup_return_place) %>
+  <%= render_variable_input_text('booking.custom_pickup_return_place_price', t.booking_settings.form.custom_pickup_return_place_price, 3, 3) %>
+  <%= render_variable_select('booking.pickup_return_timetable', t.booking_settings.form.pickup_return_timetable, pickup_return_timetables) %>  
+  <%= render_variable_input_text('booking.pickup_return_timetable_out_price', t.booking_settings.form.pickup_return_timetable_out_price, 3, 3) %>    
+  <% end %>      
+  <% if booking_mode == 'restaurant' %>
   <h3><%=t.booking_settings.form.turns_group%></h3>
   <%= render_variable_input_text('booking.morning_turns', t.booking_settings.form.morning_turns, 255, 30) %>
   <%= render_variable_input_text('booking.afternoon_turns', t.booking_settings.form.afternoon_turns, 255, 30) %>
@@ -43,7 +50,9 @@
   <%= render_variable_input_text('booking.max_children_extra', t.booking_settings.form.max_children_extra, 2, 2) %>  
   <%= render_variable_input_text('booking.min_adults', t.booking_settings.form.min_adults, 2, 2) %>
   <%= render_variable_input_text('booking.max_adults', t.booking_settings.form.max_adults, 2, 2) %>
-  <%= render_variable_input_text('booking.max_adults_extra', t.booking_settings.form.max_adults_extra, 2, 2) %>    
+  <%= render_variable_input_text('booking.max_adults_extra', t.booking_settings.form.max_adults_extra, 2, 2) %> 
+  <%= render_variable_textarea('booking.people_resources', t.booking_settings.form.people_resources) %>
+  <% end %> 
 </div>
   </div>
   <div class="grid_12">
