--- a/views/reserva-online-restaurant.js.erb
+++ b/views/reserva-online-restaurant.js.erb
@@ -62,6 +62,8 @@
 
     var bookingModel = {
 
+       booking : {},
+
        getUrlVars : function() {
           var vars = [], hash;
           var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
@@ -93,10 +95,6 @@
              case 'select_item' :
                 this.process_state = "extras_selection";
                 break;
-
-             case 'select_extras' :
-               this.process_state = 'completing_booking';              
-               break;
                         
              case 'go_to_complete_booking':
                this.process_state = 'continue_booking';
@@ -119,10 +117,79 @@
         
        },
 
+       go_to_fill_data : function(data) { /* Go to fill data tab */
+      
+        this.booking.date_from = data.datefrom;
+        this.booking.time_from = data.timefrom;
+        this.booking.number_of_adults = data.number_of_adults;
+
+        this.change_state('go_to_complete_booking');
+
+       },
+
+       confirm_booking : function (data, payNow) { /* Confirms the booking */
+
+         for (data_item in data.booking) {
+           this.booking[data_item] = data.booking[data_item];
+         }
+         var json_request = JSON.stringify(this.booking,
+                  function (key, value) {
+                      // Convert the date objects (edited as input text) in the right format
+                      if (this[key] instanceof Date) {
+                         return this[key].toString();
+                      }
+                      return value;
+                  });
+
+         this.change_state('send_booking');     
+
+         $.ajax( 
+                 {
+                   type : 'POST',
+                   url :  '<%=confirm_booking_url%>', //bookingDataSystem.configuration.booking_url ||
+                   data : json_request,
+                   dataType: 'html',  /* Response expected from the server */
+                   contentType: 'application/json; charset=utf-8', /* Data type sent to the server */
+                                       
+                   success : function(data, textStatus, jqXHR) { /* RESPONSE OK */
+                     if (jqXHR.getResponseHeader('Content-Type').match(/application\/json/)) {
+                       bookingModel.confirmBookingResponse = JSON.parse(data);  
+                     }
+                     else {
+                       bookingModel.confirmBookingResponse = data;  
+                     }
+                     bookingModel.change_state('booking_response_ok'); /* textStatus y data */
+                   }, 
+                   
+                   error: function(jqXHR, textStatus, errorThrow){ /* RESPONSE ERROR */
+                     bookingModel.change_state('booking_response_error'); /* textStatus y errorThrow */
+                   }
+                   
+                 }); 
+
+       }
+
 
     };
 
     var bookingController = {
+
+      go_to_fill_data_click : function(data) { /* Go to fill data button click */
+
+        if (typeof _gaq != 'undefined') {
+          _gaq.push(['_trackEvent', 'Reservations', 'Filling reservation']);
+        }
+      
+        bookingModel.go_to_fill_data(data);
+
+      },
+
+      confirm_booking : function (data) { /* Confirm button click */
+        if (typeof _gaq != 'undefined') {
+          _gaq.push(['_trackEvent', 'Reservations', 'Confirm Booking']);
+        }        
+        bookingModel.confirm_booking(data, false);
+      },      
 
     };
 
@@ -131,20 +198,16 @@
        init : function () { /* Inits the View */  
                                                 
          // Configure the date controls
-         // http://jquery-ui.googlecode.com/svn/trunk/ui/i18n/ (locales for datepicker)
-         // http://keith-wood.name/uiDatepickerValidation.html (validation for datepicker)
          $.datepicker.setDefaults( $.datepicker.regional["<%=session[:locale] || 'es'%>" ] );
                        
          this.configureBookingGui();
               
-         // Configure the comments textarea
-         /*
+         // Configure the comments textarea         
          YSDForms.limit_text_area_content_size(document.getElementById('booking[comments]'), 256, 
             function (content_remain) {
               document.getElementById('booking_comments_length').innerHTML = '<strong>' + content_remain + '</strong>';
             }
          );
-         */                
          
          // configure place holders
          $('input[placeholder]:visible,textarea[placeholder]:visible').placeholder();
@@ -200,11 +263,11 @@
          $('#datefrom').datepicker({numberOfMonths:1, minDate:bookingDataSystem.configuration.min_date, 
           maxDate: new Date(bookingDataSystem.configuration.max_date).add(-1).days(), dateFormat: 'dd/mm/yy'}, locale);
          $('#datefrom').datepicker('setDate', '+0'); 
-
-         $('#button_continua_rellenar_datos').bind('click', function(event) {
-            bookingController.go_to_fill_data_click();
-         });
      
+         $('#button_confirmar_reserva').bind('click', function(event) {
+            bookingView.buttonPressed = 'request';
+         });
+
        },    
 
        configure_validations : function () {
@@ -216,27 +279,47 @@
           {
             
             submitHandler: function(form) {
-               //bookingView.calculate_prices();
+               data = $(form).formParams(false);
+               data.datefrom = $('#datefrom').datepicker("getDate");
+               bookingController.go_to_fill_data_click(data);
                return false;
             },
                                
             rules : {
                'datefrom': {
                  required: true 
-               }
+               },
+               'timefrom': { 
+                 required: true
+               },
+               'number_of_adults' : {
+                 required: true
+               }              
             },
             
             messages : {
                'datefrom': {
                  required : '<%=t.new_booking_restaurant.date_mandatory%>'
-               } 
+               },
+               'timefrom': {
+                 required : '<%=t.new_booking_restaurant.time_mandatory%>'
+               },
+               'number_of_adults' : { 
+                 required: '<%=t.new_booking_restaurant.people_mandatory%>'
+               }
+
             },
             
             errorPlacement : function(error, element) {
               if (element.attr('name') === 'datefrom') {
-                error.insertAfter('#timefrom');
+                error.appendTo($('#error_date'));
               }
-              
+              if (element.attr('name') === 'timefrom') {
+                error.appendTo($('#error_time'));
+              }              
+              if (element.attr('name') === 'number_of_adults') {
+                error.appendTo($('#error_number_of_adults'));
+              }              
             }            
           }
          );
@@ -247,10 +330,7 @@
           
            submitHandler: function(form) {
              $('#reservation_error').html('');
-             if (bookingView.buttonPressed == 'pay') {
-               bookingController.pay_now_button_click($(form).formParams(false));
-             } 
-             else {
+             if (bookingView.buttonPressed == 'request') {
                bookingController.confirm_booking($(form).formParams(false)); // Numbers and booleans are not converted (hold as strings)
              }
              return false;
@@ -262,7 +342,6 @@
            
            rules : {
             
-            'booking[number_of_adults]' : 'number_of_adults',
             'booking[customer_name]': 'required',
             'booking[customer_surname]' : 'required',
             'booking[customer_email]' : {
@@ -285,7 +364,6 @@
            
            messages : {
             
-            'booking[number_of_adults]' : '<%=t.new_booking_restaurant.people_mandatory%>',
             'booking[customer_name]': '<%=t.new_booking.customer_name.required%>',
             'booking[customer_surname]' : '<%=t.new_booking.customer_surname.required%>',           
             'booking[customer_email]' : {
@@ -398,7 +476,6 @@
                 $('#form-reservation').show();
                 this.tabs['tab-choose-item'].setState('not-enabled'); 
                 this.tabs['tab-complete-reservation'].setState('active');
-                bookingView.check_payment();
                 break;
               
            }
